<resources>
    <string name="app_name">SugarwiseApp</string>
    <string name="title_menu_1">Hi!\nWelcome</string>
    <string name="title_menu_2">Scan Your Foods\n</string>
    <string name="title_menu_3">Daily Report of\nYour_Food</string>
    <string name="title_menu_4">Sugar Warning\nConsumption</string>
    <string name="desc_menu_1">Start manage your sugar intake with SugarWise for making informed and mindful choices about your sweet indulgences.</string>
    <string name="desc_menu_2">You can easily enter the type of food you consume using the camera feature to detect it automatically</string>
    <string name="desc_menu_3">View your daily report based on all the food you consumed that day. We will provide graphs that help you monitor your daily reports</string>
    <string name="desc_menu_4">We will give you a warning when the amount of sugar you have consumed exceeds the maximum daily sugar consumption limit for humans</string>
    <string name="desc_logo_1">Gambar seekor koala yang menyapa anda</string>
    <string name="desc_logo_2">Gambar seekor koala yang memegang handphone untuk melakukan scan makanan</string>
    <string name="desc_logo_3">Gambar seekor koala yang menunjuk ke arah suatu statistik pada papan tulis</string>
    <string name="desc_logo_4">Gambar seekor koala yang memegang papan peringatan</string>
    <string name="signIn">Sign In</string>
    <string name="next">Continue</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">Welcome!</string>
    <string name="under_welcome">It’s great to have you back</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_thu">THU</string>
    <string name="lbl_tuesday">Tuesday</string>
    <string name="lbl_l">L</string>
    <string name="msg_tuesday_28_nove">Tuesday 28 November 2023</string>
    <string name="lbl_45_60_g">45 /60 g</string>
    <string name="lbl_sunday">Sunday</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account?</string>
    <string name="lbl_email_address">Email Address</string>
    <string name="lbl_20_g_sugar">20 g Sugar</string>
    <string name="msg_sugar_warning_c">Sugar Warning Consumption</string>
    <string name="msg_confirm_passwor">Confirm Password</string>
    <string name="lbl_34_67_g">34 / 67 g</string>
    <string name="lbl_20_g_sugar2">20 g sugar</string>
    <string name="lbl_home">Home</string>
    <string name="msg_already_have_an">Already have an account?</string>
    <string name="msg_daily_report_of">Daily Report of Your Food</string>
    <string name="msg_thursday_30_nov">Thursday  30 November 2023</string>
    <string name="lbl_health_info">Health info</string>
    <string name="lbl_wednesday">Wednesday</string>
    <string name="lbl_meal_details">Meal details</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="msg_fat_13_67_g">Fat - 13 / 67 gram</string>
    <string name="lbl_your_password">your password</string>
    <string name="lbl_37_50_g">37 / 50 g</string>
    <string name="lbl_sex">Sex</string>
    <string name="lbl_camera_scan">Camera scan</string>
    <string name="lbl_55">55</string>
    <string name="lbl_friday">Friday</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_result">Scan Result</string>
    <string name="lbl_4_3_g_protein">4.3 g Protein</string>
    <string name="lbl_scan_result">Scan Result</string>
    <string name="lbl_scan_your_foods">Scan Your Foods</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="msg_add_to_diary">+ Add to Diary Log</string>
    <string name="lbl_wed">WED</string>
    <string name="lbl_sun">SUN</string>
    <string name="lbl_edit_profile">Edit Profile</string>
    <string name="msg_2_dec_2023_1_3">2 Dec, 2023 1:30 PM</string>
    <string name="msg_dicki_fathurohm">Dicki Fathurohman</string>
    <string name="lbl_d">d</string>
    <string name="msg_donut_not_suita">Donut Not suitable for diabetes</string>
    <string name="msg_monday_27_novem">Monday 27 November 2023</string>
    <string name="msg_apple_suitable">Apple Suitable for diabetes</string>
    <string name="lbl_ice_cream">Ice cream</string>
    <string name="msg_blood_sugar_mg2">Blood Sugar (mg/dL)</string>
    <string name="msg_view_your_daily">View your daily report based on all the food you consumed that day. We will provide graphs that help you monitor your daily reports</string>
    <string name="lbl_fullname">Fullname</string>
    <string name="msg_you_can_easily">You can easily enter the type of food you consume using the camera feature to detect it automatically</string>
    <string name="lbl_water">Water</string>
    <string name="lbl_1_serving">serving</string>
    <string name="lbl_1_december_2023">1 December 2023</string>
    <string name="lbl_sign_out">Sign Out</string>
    <string name="lbl_apple">Apple</string>
    <string name="lbl_250_2000_ml">250 / 2000 ml</string>
    <string name="msg_ice_cream_not_s">Ice Cream Not suitable for diabetes</string>
    <string name="msg_are_you_sure_yo">Are you sure you want to permanently delete your account?</string>
    <string name="lbl_monday">Monday</string>
    <string name="msg_2_dec_2023_10">2 Dec, 2023 10:30 AM</string>
    <string name="msg_suitable_for_di">Suitable for diabetes</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_7_g_sugar2">7 g Sugar</string>
    <string name="lbl_15_g_fat">15 g Fat</string>
    <string name="msg_2_dec_2023_11">2 Dec, 2023 11:00 AM</string>
    <string name="lbl_donut">Donut</string>
    <string name="msg_we_will_give_yo">We will give you a warning when the amount of sugar you have consumed exceeds the maximum daily sugar consumption limit for humans</string>
    <string name="lbl_welcome">Welcome!</string>
    <string name="lbl_2_december_2023">2 December 2023</string>
    <string name="msg_body_height_cm">Body height (cm)</string>
    <string name="msg_body_weight_kg">Body weight (Kg)</string>
    <string name="lbl_almost_there">Almost There!</string>
    <string name="lbl_protein">Protein</string>
    <string name="lbl_time">Time</string>
    <string name="lbl_donut2">Donut</string>
    <string name="lbl_fat">Fat</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_donut_2_serving">Donut 2 serving</string>
    <string name="lbl_50_g">50 g</string>
    <string name="lbl_fri">FRI</string>
    <string name="msg_28_november_202">28 November 2023</string>
    <string name="msg_wednesday_29_no">Wednesday 29 November 2023</string>
    <string name="msg_26_november_202">26 November 2023</string>
    <string name="lbl_0_g">0 g</string>
    <string name="lbl_mon">MON</string>
    <string name="msg_body_height_cm2">Body Height (Cm)</string>
    <string name="lbl_personal_info">Personal info</string>
    <string name="lbl_30_g_sugar">30 g sugar</string>
    <string name="lbl_ice_cream2">Ice Cream</string>
    <string name="lbl_tue">TUE</string>
    <string name="lbl_2_serving">2 serving</string>
    <string name="lbl_20">20</string>
    <string name="msg_by_clicking_reg">By clicking Register, you agree to our</string>
    <string name="lbl_last_step">Last Step!</string>
    <string name="lbl_5_g_fat">5 g Fat</string>
    <string name="msg_sunday_26_novem">Sunday 26 November 2023</string>
    <string name="lbl_47_kg">47 Kg</string>
    <string name="lbl_add_food">+ Add Food</string>
    <string name="msg_ice_cream_1_ser">Ice cream 1 serving</string>
    <string name="lbl_21">21</string>
    <string name="lbl_age">Age</string>
    <string name="lbl_apple_1_serving">Apple 1 serving</string>
    <string name="lbl_50_g_sugar">50 g sugar</string>
    <string name="msg_please_fill_you">Please fill your personal information</string>
    <string name="lbl_100">100</string>
    <string name="lbl_sugar_intake">Sugar intake</string>
    <string name="lbl_26_nov_02_dec">26 Nov - 02 Dec</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="lbl_7_g_sugar">7 g sugar</string>
    <string name="lbl_100_mg">100 mg/</string>
    <string name="lbl_sat">SAT</string>
    <string name="lbl_account_info">Account info</string>
    <string name="lbl_12">1%</string>
    <string name="lbl_park_hanbin">Park Hanbin</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_statistics">Statistics</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="msg_30_november_202">30 November 2023</string>
    <string name="lbl_sign_up2">Sign Up!</string>
    <string name="msg_terms_and_data">Terms and Data Policy</string>
    <string name="lbl_back_to_home">Back to Home</string>
    <string name="lbl_edit_profil">Edit Profil</string>
    <string name="lbl_blood_sugar">Blood Sugar</string>
    <string name="lbl_26_g_fat">26 g Fat</string>
    <string name="lbl_19">19%</string>
    <string name="lbl_quantity">Quantity</string>
    <string name="msg_create_an_accou">Create an account using your email</string>
    <string name="msg_protein_2_15">Protein - 2.15 / 60 gram</string>
    <string name="lbl_profile">Profile</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_sugar">Sugar</string>
    <string name="lbl">+</string>
    <string name="lbl_60_g_sugar">60 g sugar</string>
    <string name="lbl_176_cm">176 Cm</string>
    <string name="lbl_body_height">Body Height</string>
    <string name="lbl_scan">Scan</string>
    <string name="lbl_history_log">History Log</string>
    <string name="lbl_save">Save</string>
    <string name="msg_not_suitable_fo">Not suitable for diabetes</string>
    <string name="lbl_3_g_protein">3 g Protein</string>
    <string name="lbl_sugarwise">SugarWise</string>
    <string name="lbl_1">1</string>
    <string name="lbl_100_g">100 g</string>
    <string name="lbl_2">2</string>
    <string name="lbl_3">3</string>
    <string name="lbl_hi_welcome">Hi! Welcome</string>
    <string name="msg_blood_sugar_mg">Blood sugar (mg/dL)</string>
    <string name="msg_start_manage_yo">Start manage your sugar intake with SugarWise for making informed and mindful choices about your sweet indulgences.</string>
    <string name="lbl_thursday">Thursday</string>
    <string name="lbl_202">20%</string>
    <string name="msg_normal_limits_o">Normal limits of consumption: 50g</string>
    <string name="lbl_70_kg">70 Kg</string>
    <string name="msg_example_bangkit">example@bangkit.academy</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_body_weight">Body weight</string>
    <string name="lbl_175_cm">175 Cm</string>
    <string name="lbl_camera">Camera</string>
    <string name="msg_water_250_200">Water 250 / 2000 ml</string>
    <string name="lbl_weekly_stats">Weekly stats</string>
    <string name="lbl_165">165</string>
    <string name="msg_saturday_2_dece">Saturday 2 December 2023</string>
    <string name="lbl_70_g_sugar">70 g sugar</string>
    <string name="lbl_change_image">Change Image</string>
    <string name="lbl_food_consumed">Food Consumed</string>
    <string name="lbl_100_g_sugar">100 g sugar</string>
    <string name="lbl_27_g_sugar">27 g sugar</string>
    <string name="lbl_40_g_sugar">40 g sugar</string>
    <string name="msg_friday_1_decemb">Friday 1 December 2023</string>
    <string name="lbl_5_g_protein">5 g Protein</string>
    <string name="msg_it_s_great_to_h">It\u2019s great to have you back</string>
    <string name="lbl_25_g">25 g</string>
    <string name="msg_fill_in_your_he">Fill in your health condition</string>
    <string name="msg_consuming_this">Consuming this food may exceed your daily sugar intake! Always be mindful of your sugar intake for a healthier lifestyle.</string>
    <string name="lbl_warning">Warning!</string>
    <string name="lbl_eat_anyway">+ Eat anyway</string>
    <string name="lbl_avoid">Avoid</string>
</resources>