<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.register.RegisterTwoActivity">

    <LinearLayout android:gravity="start"
        android:id="@+id/linearSignUpTwo"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:id="@+id/imageArrowTwo"
            android:layout_height="@dimen/_20pxh"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_40pxv"
            android:layout_width="@dimen/_31pxh"
            android:scaleType="fitXY" android:src="@drawable/img_arrow2"
            tools:ignore="ContentDescription" tools:src="@drawable/img_arrow2"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearProgressBar"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_32pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnframeeighteen"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2pxv"
                android:layout_weight="0.27" android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtFrameEighteen"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_33pxh"
                    android:layout_width="@dimen/_33pxh"
                    android:layout_marginEnd="@dimen/_15pxh"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:paddingBottom="@dimen/_5pxv"
                    android:paddingStart="@dimen/_9pxh"
                    android:paddingTop="@dimen/_4pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_1"
                    style="@style/txtSolidRounded_1" tools:text="@string/lbl_1"/>
                <TextView
                    android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtAccountinfo"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_account_info"
                    style="@style/txtMontserratromanmedium10"
                    tools:text="@string/lbl_account_info"/>
            </LinearLayout>
            <View android:background="@color/gray_400"
                android:id="@+id/lineLineOne"
                android:layout_height="@dimen/_2pxv"
                android:layout_marginBottom="@dimen/_23pxv"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_weight="0.18" android:layout_width="0dp"/>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnframesixteen"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2pxv"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_weight="0.27" android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtFrameSixteen"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_33pxh"
                    android:layout_width="@dimen/_33pxh"
                    android:layout_marginEnd="@dimen/_14pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:paddingBottom="@dimen/_6pxv"
                    android:paddingEnd="@dimen/_10pxh"
                    android:paddingStart="@dimen/_10pxh"
                    android:paddingTop="@dimen/_3pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_2"
                    style="@style/txtSolidRounded"
                    tools:text="@string/lbl_2"/>
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtPersonalinfo"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_personal_info"
                    style="@style/txtMontserratromanmedium10" tools:text="@string/lbl_personal_info"/>
            </LinearLayout>
            <View android:background="@color/gray_400"
                android:id="@+id/lineLineOneOne"
                android:layout_height="@dimen/_2pxv"
                android:layout_marginBottom="@dimen/_23pxv"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_marginTop="@dimen/_25pxv"
                android:layout_weight="0.18" android:layout_width="0dp"/>
            <LinearLayout android:gravity="center_horizontal"
                android:id="@+id/linearColumnframeseventeen"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_2pxv"
                android:layout_marginStart="@dimen/_5pxh"
                android:layout_weight="0.17" android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:gravity="center_horizontal"
                    android:id="@+id/txtFrameSeventeen"
                    android:layout_height="@dimen/_33pxh"
                    android:layout_width="@dimen/_33pxh"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:paddingBottom="@dimen/_5pxv"
                    android:paddingEnd="@dimen/_10pxh"
                    android:paddingStart="@dimen/_10pxh"
                    android:paddingTop="@dimen/_4pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_3"
                    style="@style/txtSolidRounded_1" tools:text="@string/lbl_3"/>
                <TextView android:ellipsize="end"
                    android:gravity="start"
                    android:id="@+id/txtHealthinfo"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_3pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_health_info"
                    style="@style/txtMontserratromanmedium10" tools:text="@string/lbl_health_info"/>
            </LinearLayout>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtAlmostThere"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_8pxh"
            android:singleLine="true"
            android:text="@string/lbl_almost_there"
            style="@style/txtMontserratromanbold32" tools:text="@string/lbl_almost_there"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtPleasefillyou"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_3pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@string/msg_please_fill_you"
            style="@style/txtMontserratromanmedium16" tools:text="@string/msg_please_fill_you"/>
        <TextView android:ellipsize="end" android:id="@+id/txtFullname"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_37pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@string/lbl_fullname"
            style="@style/txtMontserratromansemibold14" tools:text="@string/lbl_fullname"/>
        <EditText
            android:background="@drawable/rectangle_bg_gray_200_radius_5"
            android:ellipsize="end"
            android:hint="@string/msg_dicki_fathurohm"
            android:id="@+id/etGroupFive" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingBottom="@dimen/_18pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_13pxh"
            android:paddingTop="@dimen/_16pxv" android:singleLine="true"
            android:textColorHint="@color/gray_400"
            android:textColor="@color/black"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end" android:id="@+id/txtSex"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true" android:text="@string/lbl_sex"
            style="@style/txtMontserratromansemibold14" tools:text="@string/lbl_sex"/>
        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_3pxv"
            android:background="@drawable/rectangle_bg_gray_200_radius_5"
            android:paddingEnd="@dimen/_18pxh"
            android:paddingStart="@dimen/_15pxh"
            android:paddingTop="@dimen/_16pxv"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingBottom="@dimen/_18pxv"
            android:textColorHint="@color/gray_401"/>

        <TextView android:ellipsize="end" android:id="@+id/txtAge"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true" android:text="@string/lbl_age"
            style="@style/txtMontserratromansemibold14" tools:text="@string/lbl_age"/>
        <EditText
            android:ellipsize="end"
            android:id="@+id/etGroupFiveOne"
            android:hint="@string/lbl_20"
            android:background="@drawable/rectangle_bg_gray_200_radius_5"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingStart="@dimen/_15pxh"
            android:paddingTop="@dimen/_17pxv"
            android:singleLine="true"
            android:textColor="@color/black"
            style="@style/txtSolidRounded_2"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnContinue"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_7pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_7pxv" android:singleLine="true"
            android:text="@string/lbl_continue"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_continue"/>
        <LinearLayout
            android:id="@+id/linearSignInoption"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_30pxv"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/txtConfirmation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/msg_already_have_an"
                style="@style/txtMontserratromanmedium14"
                tools:text="@string/msg_already_have_an" />

            <TextView
                android:id="@+id/txtSignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:layout_marginStart="@dimen/_5pxh"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/lbl_sign_in"
                style="@style/txtMontserratromanbold14"
                tools:text="@string/lbl_sign_in" />
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtByclickingReg"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_45pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            android:text="@string/msg_by_clicking_reg"
            style="@style/txtMontserratromanmedium12_2" tools:text="@string/msg_by_clicking_reg"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtTermsandData"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_4pxv"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="@dimen/_3pxh"
            android:singleLine="true"
            android:text="@string/msg_terms_and_data"
            style="@style/txtMontserratromansemibold12" tools:text="@string/msg_terms_and_data"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>